# SQL-Query-Evaluator

./: .gitignore  .rebuild_trigger  Dockerfile  README.md  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_env.py  upload_to_hf.py
openenv_sql_query_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
server/: Dockerfile  app.py  database.py  grader.py  requirements.txt  sql_query_env_environment.py
sql_query_env/: client.py  models.py  openenv.yaml  tasks.py  test_env.py
sql_query_env/server/: __init__.py  app.py  database.py  grader.py  sql_query_env_environment.py
